k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portafolio
  labels:
    name: portafolio
    app: portafolio
