k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portafolio-app
  labels:
    app: portafolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portafolio
  template:
    metadata:
      labels:
        app: portafolio
    spec:
      containers:
      - name: portafolio
        image: ghcr.io/carlos-javier10/portafolio:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
